--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm install && nodemon site/app.js",
+    "start": "cd site && npm start",
     "postinstall": "cd site && npm install"
   },
   "keywords": [],
