--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./src/bin/www",
-    "test": "nodemon ./src/bin/www"
+    // package json solo para correr node en heroku, ruta distinta al otro package json del site
+    "start": "node ./site/src/bin/www",
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
