--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./site/src/bin/www",
+    "start": "node ./site/src/bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
