--- a/site/package.json
+++ b/site/package.json
@@ -18,5 +18,8 @@
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
