--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node src/bin/www",
+    "start": "node ./src/bin/www",
     "test": "nodemon src/bin/www"
   },
   "dependencies": {
