--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "sweetalert2": "^10.13.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
